Fixing visibility issue with summary-table before the rewrite.
* web/lib/main.js:
    - Fixing a visibility issue with one of the divs.

* web/stylesheets/main.css:
    - Setting default visibility to hidden for #summary-table div.

--- a/web/stylesheets/main.css
+++ b/web/stylesheets/main.css
@@ -60,6 +60,10 @@ div.summary {
     visibility: hidden;
 }
 
+#summary-table div {
+    visibility: hidden;
+}
+
 .summary table {
     width: 25%;
 }
